--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
 <html>
   <body style = "background-color: LightPink">
     <h1 style = "color: DeepPink;"> MAIZE MAZE</h1>
