--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ div {text-align: center;}
 </style>
 </head>
 <html>
-  <body style = "background-color: LightPink">
-    <h1 style = "color: DeepPink;"> MAIZE MAZE</h1>
+  <body style = "background-color: #47476b">
+    <h1 style = "color: #FFD100;"> MAIZE MAZE</h1>
