--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ div {text-align: center;}
 </head>
 <html>
   <body style = "background-color: #47476b">
-    <h1 style = "color: #FFD100;"> MAIZE MAZE</h1>
+    <h1 style = "color: ##ffc512;"> MAIZE MAZE</h1>
