--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ div {text-align: center;}
 </style>
 </head>
 <html>
-  <body style = "background-color: #47476b">
+  <body style = "background-color: #050f1e">
     <h1 style = "color: ##ffc512;"> MAIZE MAZE</h1>
