--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <style>
+<link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet'>
+  body {
+    font-family: 'Creepster';
+}
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
