--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <div class="fog-img fog-img-first"></div>
       <div class="fog-img fog-img-second"></div>
     </div>
-
+<div class="title">
+      <h1 style = "font-family: 'Creepster'; font-size: 52px; color: #ffc512;"> MAIZE MAZE</h1>
+    </div>
     <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet'>
 <style>
 h1 {text-align: center;}
