--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ div {text-align: center;}
     <p style = "font-family: 'Arial'; color: #D9D9E6;">Maze Maize is a 3D, first-person horror game in which the player wakes to find themselves stranded in an abandoned corn maze. As the player searches for the way out, they realize they are not alone: supernatural entities roam the maze alongside them. Will the player find the exit, or will the monsters in the maze find them first?</p>
    </body>
 
-    
+    <img src="img/man.png" alt="Corn Man">
   </section>
 
 </body>
