--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <div>
       <img src="img/map.png" alt="Map">
     </div>
+    <div class="bottom-images">
+      <img src="img/map.png" alt="Map">
+      <img src="img/map.png" alt="Map">
+    </div>
     <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet'>
 <style>
 h1 {text-align: center;}
