--- a/index.html
+++ b/index.html
@@ -1,57 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
   <title>Maize Maze</title>
-
   <link rel="stylesheet" href="./css/main.css">
+  <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet'>
+  <style>
+    body {background-color: #050f1e;}
+    h1, p {text-align: center;}
+    h1 {font-family: 'Creepster'; font-size: 52px; color: #ffc512;}
+    p {font-family: 'Arial'; color: #D9D9E6;}
+  </style>
 </head>
-
 <body>
-
   <section class="fog">
     <div class="absolute-bg"></div>
     <div class="fog-container">
       <div class="fog-img fog-img-first"></div>
       <div class="fog-img fog-img-second"></div>
     </div>
-<div class="title">
-      <h1 style = "font-family: 'Creepster'; font-size: 52px; color: #ffc512;"> MAIZE MAZE</h1>
-      <p style = "font-family: 'Arial'; color: #D9D9E6;">Maze Maize is a 3D, first-person horror game in which the player wakes to find themselves stranded in an abandoned corn maze. As the player searches for the way out, they realize they are not alone: supernatural entities roam the maze alongside them. Will the player find the exit, or will the monsters in the maze find them first?</p>
-   <!-- <img src="img/Map.png" alt="Corn Man">
-  <img src="img/Map.png" alt="Map">
-      <img src="img/Map.png" alt="Map">-->
+    <div class="title">
+      <h1>MAIZE MAZE</h1>
+      <p>Maze Maize is a 3D, first-person horror game in which the player wakes to find themselves stranded in an abandoned corn maze. As the player searches for the way out, they realize they are not alone: supernatural entities roam the maze alongside them. Will the player find the exit, or will the monsters in the maze find them first?</p>
+      <img src="img/man.png" alt="Corn Man">
+      <img src="img/map.png" alt="Map">
     </div>
 
-    <div>
-      <img src="img/Map.png" alt="Map">
-    </div>
+    <!-- Images at the bottom of the page -->
     <div class="bottom-images">
       <img src="img/Map.png" alt="Map">
       <img src="img/Map.png" alt="Map">
     </div>
-    <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet'>
-<style>
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
-</style>
-</head>
-<html>
-  <body style = "background-color: #050f1e">
-    <h1 style = "font-family: 'Creepster'; font-size: 52px; color: #ffc512;"> MAIZE MAZE</h1>
-    <p style = "font-family: 'Arial'; color: #D9D9E6;">Maze Maize is a 3D, first-person horror game in which the player wakes to find themselves stranded in an abandoned corn maze. As the player searches for the way out, they realize they are not alone: supernatural entities roam the maze alongside them. Will the player find the exit, or will the monsters in the maze find them first?</p>
-   </body>
-
-    
   </section>
-
 </body>
-
 </html>
-
-
