--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
       <img src="img/Map.png" alt="Map">
       <img src="img/Map.png" alt="Map">
     </div>
+    <div class="row">
+  <div class="column">
+    <img src="img/patrick.png" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="img/voodoo.png" alt="Forest" style="width:100%">
+  </div>
+</div>
   </section>
 </body>
 </html>
