--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <br><br><br><br>
       <br><br><br><br>
       <br><br><br><br>
-      <img src="img/Map.png" alt="Map">
-      <img src="img/Map.png" alt="Map">
+     <!-- <img src="img/Map.png" alt="Map">
+      <img src="img/Map.png" alt="Map">-->
     </div>
     <div class="row">
   <div class="column">
