--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <img src="img/voodoo.png" alt="Forest" style="width:100%">
   </div>
 </div>
+
+    <iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=B7ExssuZNCw&feature=youtu.be">
+</iframe>
   </section>
 </body>
 </html>
