--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 
     <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=B7ExssuZNCw&feature=youtu.be">
+src="https://www.youtube.com/embed/B7ExssuZNCw">
 </iframe>
   </section>
 </body>
