--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
     <img src="img/voodoo.png" alt="Forest" style="width:100%">
   </div>
 </div>
-
-    <iframe width="420" height="315"
+<div class="relative">
+<iframe width="420" height="315"
 src="https://www.youtube.com/embed/B7ExssuZNCw">
 </iframe>
+</div>
+    
   </section>
 </body>
 </html>
