--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <img src="img/voodoo.png" alt="Forest" style="width:100%">
   </div>
 </div>
-<div class="center">
+<div class="relative">
 <iframe width="420" height="315"
 src="https://www.youtube.com/embed/B7ExssuZNCw">
 </iframe>
