--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <br><br><br><br>
     </div>
 
-    <!-- Images at the bottom of the page -->
+    <!-- Images at the bottom of the page 
     <div class="bottom-images">
       <br><br><br><br>
       <br><br><br><br>
       <br><br><br><br>
      <!-- <img src="img/Map.png" alt="Map">
-      <img src="img/Map.png" alt="Map">-->
+      <img src="img/Map.png" alt="Map">
     </div>
     <div class="row">
   <div class="column">
@@ -42,7 +42,7 @@
   <div class="column">
     <img src="img/voodoo.png" alt="Forest" style="width:100%">
   </div>
-</div>
+</div>-->
 <div class="relative">
 <iframe width="420" height="315"
 src="https://www.youtube.com/embed/B7ExssuZNCw">
