--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <br><br><br><br>
       <br><br><br><br>
      <!-- <img src="img/Map.png" alt="Map"> -->
-      <img src="img/Map.png" alt="Map">
+      <!--<img src="img/Map.png" alt="Map">
     </div>
     <div class="row">
   <div class="column">
@@ -42,7 +42,7 @@
   <div class="column">
     <img src="img/voodoo.png" alt="Forest" style="width:100%">
   </div>
-</div>
+</div>-->
 <div class="relative">
 <iframe width="1260" height="1260"
 src="https://www.youtube.com/embed/B7ExssuZNCw">
