--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     <img src="img/voodoo.png" alt="Forest" style="width:100%">
   </div>
 </div>-->
+      <div class="image-container left-image">
+    <img src="img/patrick.png" alt="Left Image">
+</div>
+
+<div class="image-container right-image">
+    <img src="img/voodoo.png" alt="Right Image">
+</div>
 <div class="video-container">
 <iframe width="420" height="315"
 src="https://www.youtube.com/embed/B7ExssuZNCw">
